@@ -25,6 +25,11 @@ Deprecations:
 
   * [MESOS-5955] - Health check binary "mesos-health-check" is removed.
 
+  * [MESOS-6110] - Health checks must supply set type field from now on.
+    Additionally, `HealthCheck.HTTP` message has been renamed to
+    `HealthCheck.HttpCheckInfo` to avoid naming collisions.
+
+
 
 Release Notes - Mesos - Version 1.0.2
 --------------------------------------------
